--- a/src/Component/axios.css
+++ b/src/Component/axios.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url('/WEATHER/wether/src/pexels-johannes-plenio-1118873.jpg');
+    background-image: url('./pexels-johannes-plenio-1118873.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -27,7 +27,7 @@ input{
     height: 40px;
     width: 150px;
     margin-left: 10%;
-    background-image: url('/WEATHER/wether/src/pexels-johannes-plenio-1118873.jpg');
+    background-image: url('./pexels-johannes-plenio-1118873.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     font-size: 15px;
@@ -47,7 +47,7 @@ button{
     height: 45px;
     width: 100px;
     border-radius: 10px;
-    background-image: url('/WEATHER/wether/src/pexels-johannes-plenio-1118873.jpg');
+    background-image: url('./pexels-johannes-plenio-1118873.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     font-weight: bold;
